--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,17 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+  <body >
+    
+      <div class="card">
+        <div class="card-body">
+          <div class="left">♥</div>
+          <div class="center"> 8 </div>
+          <div class="right">♥</div>
+          
+        </div>
       </div>
+
     </div>
   </body>
 </html>
